:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.8.7\...HEAD[Unreleased]

=== Removed

* Remove `impl From<InvalidParams> for Error` ({pull-request-url}/110[#110])

== {compare-url}/v0.8.6\...v0.8.7[0.8.7] - 2024-01-07

=== Changed

* Change to use `bump-my-version`

== {compare-url}/v0.8.5\...v0.8.6[0.8.6] - 2023-12-07

=== Changed

* Supports input from stdin and output to a file in the examples
  ({pull-request-url}/93[#93])

== {compare-url}/v0.8.4\...v0.8.5[0.8.5] - 2023-11-29

=== Changed

* Bump MSRV to 1.70.0 ({pull-request-url}/90[#90])
* Enable `scrypt/std` when `std` feature is enabled ({pull-request-url}/91[#91])

== {compare-url}/v0.8.3\...v0.8.4[0.8.4] - 2023-11-04

=== Added

* Add Code of Conduct ({pull-request-url}/82[#82])
* Add serialization support for `Params` ({pull-request-url}/85[#85])

== {compare-url}/v0.8.2\...v0.8.3[0.8.3] - 2023-09-29

=== Removed

* Remove `Params::default` ({pull-request-url}/76[#76])

== {compare-url}/v0.8.1\...v0.8.2[0.8.2] - 2023-09-20 [YANKED]

=== Added

* Add constants to represent header and tag sizes ({pull-request-url}/72[#72])

=== Changed

* Change the structure of `Params` ({pull-request-url}/70[#70])

== {compare-url}/v0.8.0\...v0.8.1[0.8.1] - 2023-09-07

=== Changed

* Bump `clap` from 3 to 4 ({pull-request-url}/62[#62])
* Bump `actions/checkout` from 3 to 4 ({pull-request-url}/63[#63])

== {compare-url}/v0.7.1\...v0.8.0[0.8.0] - 2023-09-03

=== Added

* Add a specialized `Result` type for read and write operations for the scrypt
  encrypted data format ({pull-request-url}/56[#56])
* Add convenience functions for using `Encryptor` and `Decryptor`
  ({pull-request-url}/57[#57])

=== Changed
