@@ -16,6 +16,11 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 == {compare-url}/v0.8.7\...HEAD[Unreleased]
 
+=== Changed
+
+* Change `Error::source` to return `Some` when the error is
+  `Error::InvalidParams` ({pull-request-url}/110[#110])
+
 === Removed
 
 * Remove `impl From<InvalidParams> for Error` ({pull-request-url}/110[#110])
